# game_of_life_particles

./: .gitignore  CMakeLists.txt  README.md  circular_query.cpp  common.h  conanfile.txt  generate_ic.py  io.cpp  neighbor_count.cpp  plot_from_hdf5.py  run.sh  simulation.cpp
videos/: golp-2250.ogv  golp-2500.ogv  golp-velocities.ogv
